tests/models/u16/fail/max_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_items = 2)]
    value: u16,
}
fn main() {}
